--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,57 @@
-# Node.js
+# Папки сборки и зависимости
 node_modules/
+.next/
+out/
+
+# Логи
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Next.js
-.next/
-out/
+# Тесты/кеш/отчеты
 coverage/
+.cache/
+jest.cache/
+test-results/
 
-# PWA
-service-worker.js
-workbox-*
-
-# OS
+# Системные файлы
 .DS_Store
 Thumbs.db
 
-# Env & secrets
-.env
-.env.local
-.env.production
-.env.development
-.env.test
-
-# IDEs
+# IDE/редактор
 .vscode/
 .idea/
-*.swp
+*.sublime-workspace
+*.sublime-project
 
-# Misc
-*.log
-*.lock
-*.tmp
+# Персональные настройки среды
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# TypeScript cache (optional)
+# Сборка TypeScript
+dist/
+build/
 *.tsbuildinfo
 
-node_modules/
+# Файлы временные
+*.tmp
+*.log
+
+# Модули Next.js
 .next/
+out/
+
+# Документы
+*.docx
+*.xlsx
+*.pdf
+
+# Папка uploads, если есть
+uploads/
+
+# Локальные настройки
+*.local
